feat: implement max file size and max files length (#123)
